2023-11-18T16:17:45Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6915001919 # 2090
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-18
* notice: last 14d: unq all: 35 359
* notice: prev accum: outdated-unq outdated-all / unq all: 437 2152 / 473 2502
* notice: next accum: outdated-unq outdated-all / unq all: 437 2152 / 475 2511
* notice: prev exec diff / last date diff / accum: unq all: +2 +9 -0 -0 / +2 +9 -0 -0 / 2 9
* notice: removed / changed dates: [] / [2023-11-18]

2023-11-18T01:06:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6910785270 # 2088
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-18
* notice: last 14d: unq all: 33 350
* notice: prev accum: outdated-unq outdated-all / unq all: 437 2152 / 472 2498
* notice: next accum: outdated-unq outdated-all / unq all: 437 2152 / 473 2502
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [] / [2023-11-17]

2023-11-17T01:07:33Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6898506948 # 2085
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-17
* notice: last 14d: unq all: 32 346
* notice: prev accum: outdated-unq outdated-all / unq all: 437 2152 / 471 2494
* notice: next accum: outdated-unq outdated-all / unq all: 437 2152 / 472 2498
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +2 +11 -0 -0 / 2 11
* notice: removed / changed dates: [] / [2023-11-16]

2023-11-16T08:19:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6888061626 # 2083