@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-18T16:17:45Z",
-  "count" : 9,
-  "count_minmax" : [ 9, 9 ],
-  "count_decinc" : [ -0, +9 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2023-11-19T01:11:53Z",
+  "count" : 31,
+  "count_minmax" : [ 9, 31 ],
+  "count_decinc" : [ -0, +31 ],
+  "uniques" : 4,
+  "uniques_minmax" : [ 2, 4 ],
+  "uniques_decinc" : [ -0, +4 ]
 }
