@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-18T16:17:45Z",
+  "timestamp" : "2023-11-19T01:11:53Z",
   "count_outdated" : 2152,
   "uniques_outdated" : 437,
-  "count" : 2511,
-  "uniques" : 475,
+  "count" : 2533,
+  "uniques" : 477,
   "views" : [
     {
       "timestamp": "2023-11-05T00:00:00Z",
@@ -124,12 +124,12 @@
     },
     {
       "timestamp": "2023-11-18T00:00:00Z",
-      "count": 9,
-      "count_minmax": [ 9, 9 ],
-      "count_decinc": [ 0, 9 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 31,
+      "count_minmax": [ 9, 31 ],
+      "count_decinc": [ 0, 31 ],
+      "uniques": 4,
+      "uniques_minmax": [ 2, 4 ],
+      "uniques_decinc": [ 0, 4 ]
     }
   ]
 }
