@@ -1,3 +1,12 @@
+2023-11-19T01:11:53Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6917437907 # 2091
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-19
+* notice: last 14d: unq all: 37 381
+* notice: prev accum: outdated-unq outdated-all / unq all: 437 2152 / 475 2511
+* notice: next accum: outdated-unq outdated-all / unq all: 437 2152 / 477 2533
+* notice: prev exec diff / last date diff / accum: unq all: +2 +22 -0 -0 / +4 +31 -0 -0 / 4 31
+* notice: removed / changed dates: [] / [2023-11-18]
+
 2023-11-18T16:17:45Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6915001919 # 2090
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-18
